mean & median imputation on numeric cols

--- a/explorations/eda.ipynb
+++ b/explorations/eda.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1297,
+   "execution_count": 1329,
    "id": "d1e683a2",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "4                  22.64     15.6180  "
       ]
      },
-     "execution_count": 1297,
+     "execution_count": 1329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1298,
+   "execution_count": 1330,
    "id": "ad4817d7",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1299,
+   "execution_count": 1331,
    "id": "6aab3c59",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "(1000, 11)"
       ]
      },
-     "execution_count": 1299,
+     "execution_count": 1331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1300,
+   "execution_count": 1332,
    "id": "a2d740b4",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "max                119.840000  332.043689  "
       ]
      },
-     "execution_count": 1300,
+     "execution_count": 1332,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1301,
+   "execution_count": 1333,
    "id": "3bfc02f9",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1301,
+     "execution_count": 1333,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1302,
+   "execution_count": 1334,
    "id": "8efe00df",
    "metadata": {},
    "outputs": [],
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1303,
+   "execution_count": 1335,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1304,
+   "execution_count": 1336,
    "id": "9b5a6b60",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1305,
+   "execution_count": 1337,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1306,
+   "execution_count": 1338,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1307,
+   "execution_count": 1339,
    "id": "da3e668e",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 1307,
+     "execution_count": 1339,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -802,12 +802,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### identify and remove numeric outliers "
+    "### identify and handle nulls and numeric outliers "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1308,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -815,28 +815,28 @@
      "output_type": "stream",
      "text": [
       "Trip_Distance_km:\n",
-      "  Values: 70 (7.00%)\n",
-      "  Values clipped: 70 (7.00%)\n",
+      "  Values: 20 (2.00%)\n",
+      "  Values clipped: 20 (2.00%)\n",
       "\n",
       "Passenger_Count:\n",
-      "  Values: 45 (4.50%)\n",
-      "  Values clipped: 50 (5.00%)\n",
+      "  Values: 0 (0.00%)\n",
+      "  Values clipped: 0 (0.00%)\n",
       "\n",
       "Base_Fare:\n",
-      "  Values: 47 (4.70%)\n",
-      "  Values clipped: 50 (5.00%)\n",
+      "  Values: 0 (0.00%)\n",
+      "  Values clipped: 0 (0.00%)\n",
       "\n",
       "Per_Km_Rate:\n",
-      "  Values: 43 (4.30%)\n",
-      "  Values clipped: 50 (5.00%)\n",
+      "  Values: 0 (0.00%)\n",
+      "  Values clipped: 0 (0.00%)\n",
       "\n",
       "Per_Minute_Rate:\n",
-      "  Values: 43 (4.30%)\n",
-      "  Values clipped: 50 (5.00%)\n",
+      "  Values: 0 (0.00%)\n",
+      "  Values clipped: 0 (0.00%)\n",
       "\n",
       "Trip_Duration_Minutes:\n",
-      "  Values: 37 (3.70%)\n",
-      "  Values clipped: 50 (5.00%)\n",
+      "  Values: 0 (0.00%)\n",
+      "  Values clipped: 0 (0.00%)\n",
       "\n"
      ]
     }
@@ -848,6 +848,16 @@
     "\n",
     "numeric_features = df[numeric_columns.drop(target)]\n",
     "\n",
+    "# Fill nulls with median or mean\n",
+    "for col in numeric_columns:\n",
+    "    null_count = df[col].isna().sum()\n",
+    "    if null_count > 0:\n",
+    "        mean_val = df[col].mean()\n",
+    "        median_val = df[col].median()\n",
+    "        chosen_val = median_val if abs(mean_val - median_val) > 0.1 * mean_val else mean_val\n",
+    "        df[col] = df[col].fillna(chosen_val)\n",
+    "\n",
+    "# removes or clips outliers\n",
     "def handle_outliers(df, cols, multiplier=1.5):\n",
     "    df_removed = df.copy()\n",
     "    df_clipped = df.copy()\n",
@@ -882,71 +892,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1309,
+   "execution_count": 1350,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Trip_Distance_km         50\n",
-       "Time_of_Day              50\n",
-       "Day_of_Week              50\n",
-       "Passenger_Count          50\n",
-       "Traffic_Conditions       50\n",
-       "Weather                  50\n",
-       "Base_Fare                50\n",
-       "Per_Km_Rate              50\n",
-       "Per_Minute_Rate          50\n",
-       "Trip_Duration_Minutes    50\n",
-       "Trip_Price               49\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 1309,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clipped:\n",
+      "Trip_Distance_km          0\n",
+      "Time_of_Day              50\n",
+      "Day_of_Week              50\n",
+      "Passenger_Count           0\n",
+      "Traffic_Conditions       50\n",
+      "Weather                  50\n",
+      "Base_Fare                 0\n",
+      "Per_Km_Rate               0\n",
+      "Per_Minute_Rate           0\n",
+      "Trip_Duration_Minutes     0\n",
+      "Trip_Price                0\n",
+      "dtype: int64\n",
+      "\n",
+      "Removed:\n",
+      "Trip_Distance_km          0\n",
+      "Time_of_Day              48\n",
+      "Day_of_Week              50\n",
+      "Passenger_Count           0\n",
+      "Traffic_Conditions       50\n",
+      "Weather                  49\n",
+      "Base_Fare                 0\n",
+      "Per_Km_Rate               0\n",
+      "Per_Minute_Rate           0\n",
+      "Trip_Duration_Minutes     0\n",
+      "Trip_Price                0\n",
+      "dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "df_clipped.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1310,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Trip_Distance_km          0\n",
-       "Time_of_Day              40\n",
-       "Day_of_Week              33\n",
-       "Passenger_Count           0\n",
-       "Traffic_Conditions       38\n",
-       "Weather                  38\n",
-       "Base_Fare                 0\n",
-       "Per_Km_Rate               0\n",
-       "Per_Minute_Rate           0\n",
-       "Trip_Duration_Minutes     0\n",
-       "Trip_Price               31\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 1310,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_removed.isnull().sum()"
+    "print(f\"clipped:\\n{df_clipped.isnull().sum()}\\n\\nRemoved:\\n{df_removed.isnull().sum()}\")"
    ]
   },
   {
@@ -954,7 +938,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -965,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1311,
+   "execution_count": 1343,
    "metadata": {},
    "outputs": [
     {
@@ -1004,65 +992,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>19.35</td>\n",
+       "      <td>19.350000</td>\n",
        "      <td>Morning</td>\n",
        "      <td>Weekday</td>\n",
        "      <td>3.0</td>\n",
        "      <td>Low</td>\n",
        "      <td>Clear</td>\n",
-       "      <td>3.56</td>\n",
+       "      <td>3.560000</td>\n",
        "      <td>0.80</td>\n",
        "      <td>0.32</td>\n",
        "      <td>53.82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>47.59</td>\n",
+       "      <td>47.590000</td>\n",
        "      <td>Afternoon</td>\n",
        "      <td>Weekday</td>\n",
        "      <td>1.0</td>\n",
        "      <td>High</td>\n",
        "      <td>Clear</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3.502989</td>\n",
        "      <td>0.62</td>\n",
        "      <td>0.43</td>\n",
        "      <td>40.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>36.87</td>\n",
+       "      <td>36.870000</td>\n",
        "      <td>Evening</td>\n",
        "      <td>Weekend</td>\n",
        "      <td>1.0</td>\n",
        "      <td>High</td>\n",
        "      <td>Clear</td>\n",
-       "      <td>2.70</td>\n",
+       "      <td>2.700000</td>\n",
        "      <td>1.21</td>\n",
        "      <td>0.15</td>\n",
        "      <td>37.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>30.33</td>\n",
+       "      <td>30.330000</td>\n",
        "      <td>Evening</td>\n",
        "      <td>Weekday</td>\n",
        "      <td>4.0</td>\n",
        "      <td>Low</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3.48</td>\n",
+       "      <td>3.480000</td>\n",
        "      <td>0.51</td>\n",
        "      <td>0.15</td>\n",
        "      <td>116.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>27.070547</td>\n",
        "      <td>Evening</td>\n",
        "      <td>Weekday</td>\n",
        "      <td>3.0</td>\n",
        "      <td>High</td>\n",
        "      <td>Clear</td>\n",
-       "      <td>2.93</td>\n",
+       "      <td>2.930000</td>\n",
        "      <td>0.63</td>\n",
        "      <td>0.32</td>\n",
        "      <td>22.64</td>\n",
@@ -1073,18 +1061,18 @@
       ],
       "text/plain": [
        "   Trip_Distance_km Time_of_Day Day_of_Week  Passenger_Count  \\\n",
-       "0             19.35     Morning     Weekday              3.0   \n",
-       "1             47.59   Afternoon     Weekday              1.0   \n",
-       "2             36.87     Evening     Weekend              1.0   \n",
-       "3             30.33     Evening     Weekday              4.0   \n",
-       "4               NaN     Evening     Weekday              3.0   \n",
+       "0         19.350000     Morning     Weekday              3.0   \n",
+       "1         47.590000   Afternoon     Weekday              1.0   \n",
+       "2         36.870000     Evening     Weekend              1.0   \n",
+       "3         30.330000     Evening     Weekday              4.0   \n",
+       "4         27.070547     Evening     Weekday              3.0   \n",
        "\n",
        "  Traffic_Conditions Weather  Base_Fare  Per_Km_Rate  Per_Minute_Rate  \\\n",
-       "0                Low   Clear       3.56         0.80             0.32   \n",
-       "1               High   Clear        NaN         0.62             0.43   \n",
-       "2               High   Clear       2.70         1.21             0.15   \n",
-       "3                Low     NaN       3.48         0.51             0.15   \n",
-       "4               High   Clear       2.93         0.63             0.32   \n",
+       "0                Low   Clear   3.560000         0.80             0.32   \n",
+       "1               High   Clear   3.502989         0.62             0.43   \n",
+       "2               High   Clear   2.700000         1.21             0.15   \n",
+       "3                Low     NaN   3.480000         0.51             0.15   \n",
+       "4               High   Clear   2.930000         0.63             0.32   \n",
        "\n",
        "   Trip_Duration_Minutes  \n",
        "0                  53.82  \n",
@@ -1094,7 +1082,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 1311,
+     "execution_count": 1343,
      "metadata": {},
      "output_type": "execute_result"
     }
