--- a/explorations/eda.ipynb
+++ b/explorations/eda.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1329,
+   "execution_count": 1689,
    "id": "d1e683a2",
    "metadata": {},
    "outputs": [
@@ -161,12 +161,17 @@
        "4                  22.64     15.6180  "
       ]
      },
-     "execution_count": 1329,
+     "execution_count": 1689,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "from taxipred.utils.constants import get_taxi_data\n",
     "\n",
     "df = get_taxi_data()\n",
@@ -186,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1330,
+   "execution_count": 1690,
    "id": "ad4817d7",
    "metadata": {},
    "outputs": [
@@ -221,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1331,
+   "execution_count": 1691,
    "id": "6aab3c59",
    "metadata": {},
    "outputs": [
@@ -231,7 +236,7 @@
        "(1000, 11)"
       ]
      },
-     "execution_count": 1331,
+     "execution_count": 1691,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1332,
+   "execution_count": 1692,
    "id": "a2d740b4",
    "metadata": {},
    "outputs": [
@@ -488,7 +493,7 @@
        "max                119.840000  332.043689  "
       ]
      },
-     "execution_count": 1332,
+     "execution_count": 1692,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1333,
+   "execution_count": 1693,
    "id": "3bfc02f9",
    "metadata": {},
    "outputs": [
@@ -528,7 +533,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1333,
+     "execution_count": 1693,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,20 +552,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1334,
+   "execution_count": 1694,
    "id": "8efe00df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# dtype object\n",
     "categorical_columns = df.select_dtypes(include=['object']).columns\n",
     "\n",
     "# dtype int, float\n",
-    "numeric_columns = df.select_dtypes('number').columns\n",
-    "\n"
+    "numeric_columns = df.select_dtypes(include=[\"int64\", \"float64\"]).columns"
    ]
   },
   {
@@ -572,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1335,
+   "execution_count": 1695,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1336,
+   "execution_count": 1696,
    "id": "9b5a6b60",
    "metadata": {},
    "outputs": [
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1337,
+   "execution_count": 1697,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1338,
+   "execution_count": 1698,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1339,
+   "execution_count": 1699,
    "id": "da3e668e",
    "metadata": {},
    "outputs": [
@@ -761,7 +762,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 1339,
+     "execution_count": 1699,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -807,60 +808,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1700,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trip_Distance_km:\n",
-      "  Values: 20 (2.00%)\n",
-      "  Values clipped: 20 (2.00%)\n",
-      "\n",
-      "Passenger_Count:\n",
-      "  Values: 0 (0.00%)\n",
-      "  Values clipped: 0 (0.00%)\n",
-      "\n",
-      "Base_Fare:\n",
-      "  Values: 0 (0.00%)\n",
-      "  Values clipped: 0 (0.00%)\n",
-      "\n",
-      "Per_Km_Rate:\n",
-      "  Values: 0 (0.00%)\n",
-      "  Values clipped: 0 (0.00%)\n",
-      "\n",
-      "Per_Minute_Rate:\n",
-      "  Values: 0 (0.00%)\n",
-      "  Values clipped: 0 (0.00%)\n",
-      "\n",
-      "Trip_Duration_Minutes:\n",
-      "  Values: 0 (0.00%)\n",
-      "  Values clipped: 0 (0.00%)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "target = \"Trip_Price\" # or is variable enough?\n",
-    "\n",
-    "numeric_features = df[numeric_columns.drop(target)]\n",
-    "\n",
     "# Fill nulls with median or mean\n",
-    "for col in numeric_columns:\n",
+    "for col in df[numeric_columns]:\n",
     "    null_count = df[col].isna().sum()\n",
     "    if null_count > 0:\n",
     "        mean_val = df[col].mean()\n",
     "        median_val = df[col].median()\n",
     "        chosen_val = median_val if abs(mean_val - median_val) > 0.1 * mean_val else mean_val\n",
-    "        df[col] = df[col].fillna(chosen_val)\n",
+    "        df[col] = df[col].fillna(chosen_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1701,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
     "\n",
-    "# removes or clips outliers\n",
+    "target = \"Trip_Price\"\n",
+    "\n",
+    "numeric_features = df[numeric_columns.drop(target)]\n",
+    "\n",
     "def handle_outliers(df, cols, multiplier=1.5):\n",
     "    df_removed = df.copy()\n",
     "    df_clipped = df.copy()\n",
+    "\n",
+    "    # Create a combined mask for all numeric columns\n",
+    "    mask = pd.Series(True, index=df.index)\n",
     "\n",
     "    for col in cols:\n",
     "        if df[col].dtype != 'object':\n",
@@ -870,29 +849,23 @@
     "            lower = Q1 - multiplier * IQR\n",
     "            upper = Q3 + multiplier * IQR\n",
     "\n",
-    "            # 2 separate methods\n",
-    "            # Remove rows containing outliers\n",
-    "            before_rows = len(df_removed)\n",
-    "            mask = (df_removed[col] >= lower) & (df_removed[col] <= upper)\n",
-    "            df_removed = df_removed[mask]\n",
-    "            removed_rows = before_rows - len(df_removed)\n",
+    "            # Update mask for removal\n",
+    "            mask &= (df[col] >= lower) & (df[col] <= upper)\n",
     "\n",
     "            # Clip values within bounds\n",
-    "            clipped_before = df_clipped[col].copy()\n",
-    "            df_clipped[col] = np.clip(df_clipped[col], lower, upper)\n",
-    "            clipped_count = (clipped_before != df_clipped[col]).sum()\n",
+    "            df_clipped[col] = np.clip(df[col], lower, upper)\n",
     "\n",
-    "            print(f\"{col}:\")\n",
-    "            print(f\"  Values: {removed_rows} ({removed_rows / len(df) * 100:.2f}%)\")\n",
-    "            print(f\"  Values clipped: {clipped_count} ({clipped_count / len(df) * 100:.2f}%)\\n\")\n",
+    "    # Apply final mask to remove rows with any numeric outliers\n",
+    "    df_removed = df[mask]\n",
     "\n",
     "    return df_removed, df_clipped\n",
-    "df_removed, df_clipped = handle_outliers(df, numeric_features)\n"
+    "\n",
+    "df_removed, df_clipped = handle_outliers(numeric_features, numeric_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1350,
+   "execution_count": 1702,
    "metadata": {},
    "outputs": [
     {
@@ -900,31 +873,21 @@
      "output_type": "stream",
      "text": [
       "clipped:\n",
-      "Trip_Distance_km          0\n",
-      "Time_of_Day              50\n",
-      "Day_of_Week              50\n",
-      "Passenger_Count           0\n",
-      "Traffic_Conditions       50\n",
-      "Weather                  50\n",
-      "Base_Fare                 0\n",
-      "Per_Km_Rate               0\n",
-      "Per_Minute_Rate           0\n",
-      "Trip_Duration_Minutes     0\n",
-      "Trip_Price                0\n",
+      "Trip_Distance_km         0\n",
+      "Passenger_Count          0\n",
+      "Base_Fare                0\n",
+      "Per_Km_Rate              0\n",
+      "Per_Minute_Rate          0\n",
+      "Trip_Duration_Minutes    0\n",
       "dtype: int64\n",
       "\n",
       "Removed:\n",
-      "Trip_Distance_km          0\n",
-      "Time_of_Day              48\n",
-      "Day_of_Week              50\n",
-      "Passenger_Count           0\n",
-      "Traffic_Conditions       50\n",
-      "Weather                  49\n",
-      "Base_Fare                 0\n",
-      "Per_Km_Rate               0\n",
-      "Per_Minute_Rate           0\n",
-      "Trip_Duration_Minutes     0\n",
-      "Trip_Price                0\n",
+      "Trip_Distance_km         0\n",
+      "Passenger_Count          0\n",
+      "Base_Fare                0\n",
+      "Per_Km_Rate              0\n",
+      "Per_Minute_Rate          0\n",
+      "Trip_Duration_Minutes    0\n",
       "dtype: int64\n"
      ]
     }
@@ -934,13 +897,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handling missing values in categorical columns using mode"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1703,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "df[categorical_columns] = df[categorical_columns].apply(lambda col: col.fillna(col.mode()[0]))\n",
     "\n",
+    "\n",
+    "df_clean = df_clipped.copy()\n",
+    "df_clean[categorical_columns] = df[categorical_columns].apply(lambda col: col.fillna(col.mode()[0]))\n",
     "\n"
    ]
   },
@@ -953,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1343,
+   "execution_count": 1704,
    "metadata": {},
    "outputs": [
     {
@@ -978,117 +952,110 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Trip_Distance_km</th>\n",
-       "      <th>Time_of_Day</th>\n",
-       "      <th>Day_of_Week</th>\n",
        "      <th>Passenger_Count</th>\n",
-       "      <th>Traffic_Conditions</th>\n",
-       "      <th>Weather</th>\n",
        "      <th>Base_Fare</th>\n",
        "      <th>Per_Km_Rate</th>\n",
        "      <th>Per_Minute_Rate</th>\n",
        "      <th>Trip_Duration_Minutes</th>\n",
+       "      <th>Time_of_Day</th>\n",
+       "      <th>Day_of_Week</th>\n",
+       "      <th>Traffic_Conditions</th>\n",
+       "      <th>Weather</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>19.350000</td>\n",
-       "      <td>Morning</td>\n",
-       "      <td>Weekday</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Clear</td>\n",
        "      <td>3.560000</td>\n",
        "      <td>0.80</td>\n",
        "      <td>0.32</td>\n",
        "      <td>53.82</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Clear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>47.590000</td>\n",
-       "      <td>Afternoon</td>\n",
-       "      <td>Weekday</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Clear</td>\n",
        "      <td>3.502989</td>\n",
        "      <td>0.62</td>\n",
        "      <td>0.43</td>\n",
        "      <td>40.57</td>\n",
+       "      <td>Afternoon</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Clear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>36.870000</td>\n",
-       "      <td>Evening</td>\n",
-       "      <td>Weekend</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Clear</td>\n",
        "      <td>2.700000</td>\n",
        "      <td>1.21</td>\n",
        "      <td>0.15</td>\n",
        "      <td>37.27</td>\n",
+       "      <td>Evening</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Clear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30.330000</td>\n",
-       "      <td>Evening</td>\n",
-       "      <td>Weekday</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>3.480000</td>\n",
        "      <td>0.51</td>\n",
        "      <td>0.15</td>\n",
        "      <td>116.81</td>\n",
+       "      <td>Evening</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Clear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>27.070547</td>\n",
-       "      <td>Evening</td>\n",
-       "      <td>Weekday</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Clear</td>\n",
        "      <td>2.930000</td>\n",
        "      <td>0.63</td>\n",
        "      <td>0.32</td>\n",
        "      <td>22.64</td>\n",
+       "      <td>Evening</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Clear</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Trip_Distance_km Time_of_Day Day_of_Week  Passenger_Count  \\\n",
-       "0         19.350000     Morning     Weekday              3.0   \n",
-       "1         47.590000   Afternoon     Weekday              1.0   \n",
-       "2         36.870000     Evening     Weekend              1.0   \n",
-       "3         30.330000     Evening     Weekday              4.0   \n",
-       "4         27.070547     Evening     Weekday              3.0   \n",
+       "   Trip_Distance_km  Passenger_Count  Base_Fare  Per_Km_Rate  Per_Minute_Rate  \\\n",
+       "0         19.350000              3.0   3.560000         0.80             0.32   \n",
+       "1         47.590000              1.0   3.502989         0.62             0.43   \n",
+       "2         36.870000              1.0   2.700000         1.21             0.15   \n",
+       "3         30.330000              4.0   3.480000         0.51             0.15   \n",
+       "4         27.070547              3.0   2.930000         0.63             0.32   \n",
        "\n",
-       "  Traffic_Conditions Weather  Base_Fare  Per_Km_Rate  Per_Minute_Rate  \\\n",
-       "0                Low   Clear   3.560000         0.80             0.32   \n",
-       "1               High   Clear   3.502989         0.62             0.43   \n",
-       "2               High   Clear   2.700000         1.21             0.15   \n",
-       "3                Low     NaN   3.480000         0.51             0.15   \n",
-       "4               High   Clear   2.930000         0.63             0.32   \n",
-       "\n",
-       "   Trip_Duration_Minutes  \n",
-       "0                  53.82  \n",
-       "1                  40.57  \n",
-       "2                  37.27  \n",
-       "3                 116.81  \n",
-       "4                  22.64  "
+       "   Trip_Duration_Minutes Time_of_Day Day_of_Week Traffic_Conditions Weather  \n",
+       "0                  53.82     Morning     Weekday                Low   Clear  \n",
+       "1                  40.57   Afternoon     Weekday               High   Clear  \n",
+       "2                  37.27     Evening     Weekend               High   Clear  \n",
+       "3                 116.81     Evening     Weekday                Low   Clear  \n",
+       "4                  22.64     Evening     Weekday               High   Clear  "
       ]
      },
-     "execution_count": 1343,
+     "execution_count": 1704,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X, y = df.drop(\"Trip_Price\", axis = \"columns\"), df[\"Trip_Price\"]\n",
+    "X, y = df_clean, df[\"Trip_Price\"]\n",
     "X.head()"
    ]
   },
