--- a/explorations/eda.ipynb
+++ b/explorations/eda.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 592,
    "id": "d1e683a2",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "4                  22.64     15.6180  "
       ]
      },
-     "execution_count": 498,
+     "execution_count": 592,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 593,
    "id": "ad4817d7",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 594,
    "id": "6aab3c59",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "(1000, 11)"
       ]
      },
-     "execution_count": 500,
+     "execution_count": 594,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 595,
    "id": "a2d740b4",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "max                119.840000  332.043689  "
       ]
      },
-     "execution_count": 501,
+     "execution_count": 595,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 596,
    "id": "3bfc02f9",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 502,
+     "execution_count": 596,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 597,
    "id": "8efe00df",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 598,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 599,
    "id": "9b5a6b60",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 600,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 601,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 602,
    "id": "da3e668e",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 508,
+     "execution_count": 602,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 603,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 604,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 605,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 606,
    "id": "fcdf8a8c",
    "metadata": {},
    "outputs": [
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 608,
    "id": "54b83c21",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 609,
    "id": "04ae4cf5",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 610,
    "id": "bd73007f",
    "metadata": {},
    "outputs": [],
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 611,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1183,7 @@
        "4                     True  "
       ]
      },
-     "execution_count": 517,
+     "execution_count": 611,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 612,
    "id": "61ae107c",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1205,7 @@
        "((670, 5), (330, 5))"
       ]
      },
-     "execution_count": 520,
+     "execution_count": 612,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,6 +1215,75 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
     "\n",
     "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc8e0da5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   Feature  Importance\n",
+      "0         Trip_Distance_km    0.796039\n",
+      "1              Per_Km_Rate    0.095054\n",
+      "3    Trip_Duration_Minutes    0.067956\n",
+      "2          Per_Minute_Rate    0.039002\n",
+      "4  Traffic_Conditions_High    0.001948\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "model.fit(X_train, y_train.squeeze())\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "importances = model.feature_importances_\n",
+    "feature_names = X_train.columns\n",
+    "\n",
+    "importance_df = pd.DataFrame({\n",
+    "    'Feature': feature_names,\n",
+    "    'Importance': importances\n",
+    "}).sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "print(importance_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 614,
+   "id": "fe709692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 5.95\n",
+      "MSE: 100.31\n",
+      "RMSE: 10.02\n",
+      "R²: 0.93\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "import numpy as np\n",
+    "\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"MAE: {mae:.2f}\")\n",
+    "print(f\"MSE: {mse:.2f}\")\n",
+    "print(f\"RMSE: {rmse:.2f}\")\n",
+    "print(f\"R²: {r2:.2f}\")"
    ]
   }
  ],
