--- a/explorations/eda.ipynb
+++ b/explorations/eda.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 1112,
    "id": "d1e683a2",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "4                  22.64     15.6180  "
       ]
      },
-     "execution_count": 592,
+     "execution_count": 1112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 1113,
    "id": "ad4817d7",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 1114,
    "id": "6aab3c59",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "(1000, 11)"
       ]
      },
-     "execution_count": 594,
+     "execution_count": 1114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 1115,
    "id": "a2d740b4",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "max                119.840000  332.043689  "
       ]
      },
-     "execution_count": 595,
+     "execution_count": 1115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 1116,
    "id": "3bfc02f9",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 596,
+     "execution_count": 1116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 1117,
    "id": "8efe00df",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 1118,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 1119,
    "id": "9b5a6b60",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 1120,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 1121,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 1122,
    "id": "da3e668e",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 602,
+     "execution_count": 1122,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 1123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 1124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 1125,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 1126,
    "id": "fcdf8a8c",
    "metadata": {},
    "outputs": [
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 1127,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 1128,
    "id": "54b83c21",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 1129,
    "id": "04ae4cf5",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 1130,
    "id": "bd73007f",
    "metadata": {},
    "outputs": [],
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 1131,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1183,7 @@
        "4                     True  "
       ]
      },
-     "execution_count": 611,
+     "execution_count": 1131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1194,8 +1194,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89b1bfd6",
+   "metadata": {},
+   "source": [
+    "### train|test split"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 1132,
    "id": "61ae107c",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1213,7 @@
        "((670, 5), (330, 5))"
       ]
      },
-     "execution_count": 612,
+     "execution_count": 1132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,8 +1221,15 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
-    "\n",
     "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23a04c3e",
+   "metadata": {},
+   "source": [
+    "### method for prediction models "
    ]
   },
   {
@@ -1222,68 +1237,98 @@
    "execution_count": null,
    "id": "cc8e0da5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   Feature  Importance\n",
-      "0         Trip_Distance_km    0.796039\n",
-      "1              Per_Km_Rate    0.095054\n",
-      "3    Trip_Duration_Minutes    0.067956\n",
-      "2          Per_Minute_Rate    0.039002\n",
-      "4  Traffic_Conditions_High    0.001948\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "\n",
-    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
-    "model.fit(X_train, y_train.squeeze())\n",
-    "y_pred = model.predict(X_test)\n",
+    "models = [\"linear\", \"knn\", \"random_forest\"]\n",
     "\n",
-    "importances = model.feature_importances_\n",
-    "feature_names = X_train.columns\n",
+    "def train_evaluate(X_train, y_train, X_test, y_test, model_type=\"\"):\n",
+    "    \n",
+    "    # testing models\n",
+    "    if model_type == \"linear\":\n",
+    "            model = LinearRegression()\n",
+    "            needs_scaling = True\n",
+    "    elif model_type == \"knn\":\n",
+    "            model = KNeighborsRegressor()\n",
+    "            needs_scaling = True\n",
+    "    else:\n",
+    "        model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "        needs_scaling = False\n",
     "\n",
-    "importance_df = pd.DataFrame({\n",
-    "    'Feature': feature_names,\n",
-    "    'Importance': importances\n",
-    "}).sort_values(by='Importance', ascending=False)\n",
+    "    # ensure y_train is 1D-array\n",
+    "    if hasattr(y_train, \"values\") and y_train.ndim == 2:\n",
+    "        y_train = y_train.values.ravel()\n",
     "\n",
-    "print(importance_df)"
+    "    # scaler if need\n",
+    "    if needs_scaling:\n",
+    "        scaler = StandardScaler()\n",
+    "        X_train = scaler.fit_transform(X_train)\n",
+    "        X_test = scaler.transform(X_test)\n",
+    "\n",
+    "    # train & predict model\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    # evaluate\n",
+    "    mae = mean_absolute_error(y_test, y_pred)\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "    metrics = {\n",
+    "        \"MAE\": round(mae, 2),\n",
+    "        \"MSE\": round(mse, 2),\n",
+    "        \"RMSE\": round(rmse, 2),\n",
+    "        \"R2\": round(r2, 2)\n",
+    "    }\n",
+    "    \n",
+    "    return model, metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b60881d",
+   "metadata": {},
+   "source": [
+    "### evalution of models results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
-   "id": "fe709692",
+   "execution_count": null,
+   "id": "66796bad",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 5.95\n",
-      "MSE: 100.31\n",
-      "RMSE: 10.02\n",
-      "R²: 0.93\n"
+      "           Model    MAE   RMSE    R2\n",
+      "2  random_forest   5.95  10.02  0.93\n",
+      "1            knn   7.70  17.05  0.80\n",
+      "0         linear  12.93  23.45  0.62\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "import numpy as np\n",
+    "results = []\n",
     "\n",
-    "mae = mean_absolute_error(y_test, y_pred)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "rmse = np.sqrt(mse)\n",
-    "r2 = r2_score(y_test, y_pred)\n",
+    "for model_type in models:\n",
+    "    model, metrics = train_evaluate(X_train, y_train, X_test, y_test, model_type=model_type)\n",
+    "    results.append({\n",
+    "        \"Model\": model_type,\n",
+    "        \"MAE\": metrics[\"MAE\"],\n",
+    "        \"RMSE\": metrics[\"RMSE\"],\n",
+    "        \"R2\": metrics[\"R2\"]\n",
+    "    })\n",
     "\n",
-    "print(f\"MAE: {mae:.2f}\")\n",
-    "print(f\"MSE: {mse:.2f}\")\n",
-    "print(f\"RMSE: {rmse:.2f}\")\n",
-    "print(f\"R²: {r2:.2f}\")"
+    "results_df = pd.DataFrame(results).sort_values(by=\"R2\", ascending=False)\n",
+    "print(results_df)\n"
    ]
   }
  ],
