--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -28,7 +28,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from functions import split_features_target\n",
+    "from functions import split_features_target, fillna_mean_median\n",
     "from taxipred.utils.constants import get_taxi_data\n",
     "df = get_taxi_data()"
    ]
@@ -148,8 +148,8 @@
     }
    ],
    "source": [
-    "numeric, categorical, target = split_features_target(df)\n",
-    "numeric.head()"
+    "df_numeric, df_categorical, df_target = split_features_target(df)\n",
+    "df_numeric.head()"
    ]
   },
   {
@@ -162,12 +162,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dd3dbaa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Trip_Distance_km       1000 non-null   float64\n",
+      " 1   Passenger_Count        1000 non-null   float64\n",
+      " 2   Base_Fare              1000 non-null   float64\n",
+      " 3   Per_Km_Rate            1000 non-null   float64\n",
+      " 4   Per_Minute_Rate        1000 non-null   float64\n",
+      " 5   Trip_Duration_Minutes  1000 non-null   float64\n",
+      "dtypes: float64(6)\n",
+      "memory usage: 47.0 KB\n"
+     ]
+    }
+   ],
    "source": [
-    "          "
+    "df_cleaned_numeric = fillna_mean_median(df_numeric)     \n",
+    "df_cleaned_numeric.info()     "
    ]
   },
   {
