df_cleaned_numeric_outliers done (remove scrapped)

--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -27,8 +27,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from functions import split_features_target, fillna_mean_median\n",
+    "from functions import split_features_target, fillna_mean_median, handle_outliers\n",
     "from taxipred.utils.constants import get_taxi_data\n",
     "df = get_taxi_data()"
    ]
@@ -154,10 +153,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74ca97b2",
+   "id": "f303d969",
    "metadata": {},
    "source": [
-    "### Handle missing values and outliers in the numeric columns"
+    "### Filling nulls with median or mean depending on value\n"
    ]
   },
   {
@@ -192,9 +191,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74ca97b2",
+   "metadata": {},
+   "source": [
+    "### Handle missing values and outliers in the numeric columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1cbff0b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Trip_Distance_km</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>27.070547</td>\n",
+       "      <td>19.400775</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>13.1075</td>\n",
+       "      <td>26.995000</td>\n",
+       "      <td>37.7825</td>\n",
+       "      <td>146.067047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Passenger_Count</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>2.453000</td>\n",
+       "      <td>1.079331</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.0000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Base_Fare</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>3.502989</td>\n",
+       "      <td>0.848107</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>2.7700</td>\n",
+       "      <td>3.502989</td>\n",
+       "      <td>4.2025</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Per_Km_Rate</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1.233316</td>\n",
+       "      <td>0.418922</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.8700</td>\n",
+       "      <td>1.233316</td>\n",
+       "      <td>1.5800</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Per_Minute_Rate</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.292916</td>\n",
+       "      <td>0.112662</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.1975</td>\n",
+       "      <td>0.292916</td>\n",
+       "      <td>0.3825</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Trip_Duration_Minutes</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>62.118116</td>\n",
+       "      <td>31.339413</td>\n",
+       "      <td>5.01</td>\n",
+       "      <td>37.1075</td>\n",
+       "      <td>62.118116</td>\n",
+       "      <td>87.7750</td>\n",
+       "      <td>119.840000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        count       mean        std   min      25%        50%  \\\n",
+       "Trip_Distance_km       1000.0  27.070547  19.400775  1.23  13.1075  26.995000   \n",
+       "Passenger_Count        1000.0   2.453000   1.079331  1.00   2.0000   2.000000   \n",
+       "Base_Fare              1000.0   3.502989   0.848107  2.01   2.7700   3.502989   \n",
+       "Per_Km_Rate            1000.0   1.233316   0.418922  0.50   0.8700   1.233316   \n",
+       "Per_Minute_Rate        1000.0   0.292916   0.112662  0.10   0.1975   0.292916   \n",
+       "Trip_Duration_Minutes  1000.0  62.118116  31.339413  5.01  37.1075  62.118116   \n",
+       "\n",
+       "                           75%         max  \n",
+       "Trip_Distance_km       37.7825  146.067047  \n",
+       "Passenger_Count         3.0000    4.000000  \n",
+       "Base_Fare               4.2025    5.000000  \n",
+       "Per_Km_Rate             1.5800    2.000000  \n",
+       "Per_Minute_Rate         0.3825    0.500000  \n",
+       "Trip_Duration_Minutes  87.7750  119.840000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaned_numeric_outliers = handle_outliers(df_cleaned_numeric)\n",
+    "df_cleaned_numeric_outliers.describe().T"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cbff0b2",
+   "id": "a285c7ec",
    "metadata": {},
    "outputs": [],
    "source": []
