--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "id": "f60e5763",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "id": "1b1db0bf",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "id": "80a2438a",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "id": "dd3dbaa5",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "id": "1cbff0b2",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "id": "6f971f36",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 89,
    "id": "4b77c68a",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "id": "02b4abd2",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 91,
    "id": "7ccd9469",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "id": "642bceb0",
    "metadata": {},
    "outputs": [
@@ -396,12 +396,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "id": "565da6dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_dropped = df_clean.drop([\"Time_of_Day_Night\",\n",
+    "df_cleaned = df_with_target.drop([\"Time_of_Day_Night\",\n",
     "                           \"Time_of_Day_Evening\",\n",
     "                           \"Passenger_Count\", \n",
     "                           \"Time_of_Day_Morning\",\n",
