--- a/explorations/model.ipynb
+++ b/explorations/model.ipynb
@@ -573,7 +573,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24 (3.13.7)",
+   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24-1",
    "language": "python",
    "name": "python3"
   },
@@ -587,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
