--- a/explorations/model.ipynb
+++ b/explorations/model.ipynb
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "a3aed0ad",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
    ],
    "source": [
     "\n",
-    "tuned_model = tune_model(df_results, models[\"mlp\"], models[MLPRegressor])\n",
+    "tuned_model = tune_model(df_results, models[MLPRegressor])\n",
     "\n",
     "# train/eval\n",
     "model, metrics = train_evaluate(X_train, y_train, X_test, y_test, model=tuned_model)\n",
