refactored df_models and scrapped tune... logical error

--- a/explorations/model.ipynb
+++ b/explorations/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "id": "bfe0abd6",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "4                     True         False         False     15.6180  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "id": "34c506a7",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "id": "9abdab0d",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "id": "1d2bd7e9",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "((800, 5), (200, 5))"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,51 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "a2eafa77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# creating a dict for different estimators to evaluate\n",
-    "models = {\n",
-    "  #\"linear\": {\"model\": LinearRegression(), \"scale\": True},\n",
-    "  #\"ridge\": {\"model\": Ridge(), \"scale\": True},\n",
-    "  #\"lasso\":{\"model\": Lasso(), \"scale\": True},\n",
-    "  #\"knn\": {\"model\": KNeighborsRegressor(), \"scale\": True},\n",
-    "  #\"svr\": {\"model\": SVR(), \"scale\": True},\n",
-    "  #\"mlp\": {\"model\": MLPRegressor(max_iter=200, random_state=42), \"scale\": True},\n",
-    "  \"xgb\": {\"model\": XGBRegressor(random_state=42), \"scale\": True},\n",
-    "  #\"rf\": {\"model\": RandomForestRegressor(random_state=42), \"scale\": False}\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "7255d421",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_results = hyper_optimize(X_train, y_train, models)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "403b7dfb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "df_results = df_results.sort_values(by=\"Best R2\", ascending=False)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "5b61eb08",
    "metadata": {},
    "outputs": [
     {
@@ -422,66 +379,206 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Model</th>\n",
-       "      <th>Best R2</th>\n",
-       "      <th>Best Params</th>\n",
+       "      <th>name</th>\n",
+       "      <th>model</th>\n",
+       "      <th>scale</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>xgb</td>\n",
-       "      <td>0.869875</td>\n",
-       "      <td>{'model__learning_rate': 0.05, 'model__max_dep...</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>LinearRegression()</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ridge</td>\n",
+       "      <td>Ridge()</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>lasso</td>\n",
+       "      <td>Lasso()</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>knn</td>\n",
+       "      <td>KNeighborsRegressor()</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>svr</td>\n",
+       "      <td>SVR()</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Model   Best R2                                        Best Params\n",
-       "0   xgb  0.869875  {'model__learning_rate': 0.05, 'model__max_dep..."
+       "     name                  model  scale\n",
+       "0  linear     LinearRegression()   True\n",
+       "1   ridge                Ridge()   True\n",
+       "2   lasso                Lasso()   True\n",
+       "3     knn  KNeighborsRegressor()   True\n",
+       "4     svr                  SVR()   True"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7f5ab015",
-   "metadata": {},
-   "source": [
-    "### tuning the model for with cross-validation for omptimal hyperparameters"
+    "\n",
+    "# creating a dataframe for different estimators to evaluate\n",
+    "df_models = pd.DataFrame([\n",
+    "    {\"name\": \"linear\", \"model\": LinearRegression(), \"scale\": True},\n",
+    "    {\"name\": \"ridge\", \"model\": Ridge(), \"scale\": True},\n",
+    "    {\"name\": \"lasso\", \"model\": Lasso(), \"scale\": True},\n",
+    "    {\"name\": \"knn\", \"model\": KNeighborsRegressor(), \"scale\": True},\n",
+    "    {\"name\": \"svr\", \"model\": SVR(), \"scale\": True},\n",
+    "    {\"name\": \"mlp\", \"model\": MLPRegressor(max_iter=5000, random_state=42), \"scale\": True},\n",
+    "    {\"name\": \"xgb\", \"model\": XGBRegressor(random_state=42), \"scale\": True},\n",
+    "    {\"name\": \"rf\", \"model\": RandomForestRegressor(random_state=42), \"scale\": False},\n",
+    "])\n",
+    "\n",
+    "df_models.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "a3aed0ad",
+   "execution_count": 23,
+   "id": "7255d421",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results, best_model, best_name= hyper_optimize(X_train, y_train, df_models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "403b7dfb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'MAE': 4.97, 'MSE': 54.85, 'RMSE': np.float64(7.41), 'R2': 0.91}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>best r2</th>\n",
+       "      <th>best params</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>mlp</td>\n",
+       "      <td>0.891001</td>\n",
+       "      <td>{'model__activation': 'relu', 'model__hidden_l...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>xgb</td>\n",
+       "      <td>0.869875</td>\n",
+       "      <td>{'model__learning_rate': 0.05, 'model__max_dep...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>svr</td>\n",
+       "      <td>0.866089</td>\n",
+       "      <td>{'model__C': 10, 'model__kernel': 'rbf'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>rf</td>\n",
+       "      <td>0.863280</td>\n",
+       "      <td>{'model__max_depth': 20, 'model__n_estimators'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ridge</td>\n",
+       "      <td>0.834864</td>\n",
+       "      <td>{'model__alpha': 1.0}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>lasso</td>\n",
+       "      <td>0.834859</td>\n",
+       "      <td>{'model__alpha': 0.01}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.834858</td>\n",
+       "      <td>{'model__fit_intercept': True}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>knn</td>\n",
+       "      <td>0.809608</td>\n",
+       "      <td>{'model__n_neighbors': 7}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    model   best r2                                        best params\n",
+       "5     mlp  0.891001  {'model__activation': 'relu', 'model__hidden_l...\n",
+       "6     xgb  0.869875  {'model__learning_rate': 0.05, 'model__max_dep...\n",
+       "4     svr  0.866089           {'model__C': 10, 'model__kernel': 'rbf'}\n",
+       "7      rf  0.863280  {'model__max_depth': 20, 'model__n_estimators'...\n",
+       "1   ridge  0.834864                              {'model__alpha': 1.0}\n",
+       "2   lasso  0.834859                             {'model__alpha': 0.01}\n",
+       "0  linear  0.834858                     {'model__fit_intercept': True}\n",
+       "3     knn  0.809608                          {'model__n_neighbors': 7}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "tuned_model = tune_model(df_results, \"xgb\", models)\n",
-    "\n",
+    "df_results = df_results.sort_values(by=\"best r2\", ascending=False)\n",
+    "df_results    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3aed0ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# train/eval\n",
-    "model, metrics = train_evaluate(X_train, y_train, X_test, y_test, tuned_model)\n",
+    "#model, metrics = train_evaluate(X_train, y_train, X_test, y_test, best_model)\n",
     "\n",
-    "print(metrics)\n"
+    "#print(metrics)\n"
    ]
   },
   {
@@ -494,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "id": "0aab9f33",
    "metadata": {},
    "outputs": [],
@@ -507,7 +604,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24-1",
+   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24 (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -521,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
